fixed horizontal scrolling issue on IE7 <- note, something else is causing this and the fix is a 'for now' fix, when we have more time this needs investigating properly

--- a/src/globals/css/_ietoolkit.styl
+++ b/src/globals/css/_ietoolkit.styl
@@ -4,9 +4,11 @@
 
 // The following are global CSS hacks to make IE styles work
 
+html {
+  overflow-x: hidden;
+}
 
 // IEOLD Clearfix (undoes the jeet clearfix() and applies an IEOLD safe version (may cause design issues))
-
 ieoldcf() {
   &:after {
     display:none;
