--- a/src/globals/css/layouts.ie.styl
+++ b/src/globals/css/layouts.ie.styl
@@ -1,8 +1,11 @@
 // the 'main' layout
 .l-main {
+  zoom: 1;
+  ieoldcf();
+  clear: both;
   .l-primary {
     float:left;
-    width:65%;
+    width:67%;
     margin-right: 0;
     &:first-child {
       margin-left: 0;
@@ -22,11 +25,20 @@
 
 // The 'footer' layout
 .c-footer {
+  zoom: 1;
+  .u-wrapper {
+    ieoldcf();
+    clear:both;
+  }
+  ieoldcf();
+  clear:both;
   .l-primary {
+    float: left;
     width: 79%;
     margin-right: 1%;
   }
   .l-secondary {
+    float: right;
     width: 20%;
     margin-right: 0;
   }
